infra/openshift/task-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-service
spec:
  selector:
    app: task-service
  ports:
    - name: http
      port: 8002
      targetPort: 8002
