infra/openshift/task-service/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: task-service
spec:
  to:
    kind: Service
    name: task-service
  port:
    targetPort: http
  tls:
    termination: edge
